# sup3ra-vectra

./: AGENT_CONSTITUTION.md  CONTRIBUTORS.md  ETHICAL_FAILURE_MODES.md  FOR_RESEARCHERS.md  GOVERNANCE_MANUAL.md  LICENSE  LIMITS_AND_NON_GOALS.md  ONE_PAGER.md  README.md  REPO_STRUCTURE_RATIONALE.md  SPEC.md  START_HERE.md  pyproject.toml
docs/: AGENT_PROMPT.txt  ARCHITECTURE.md  AUDITOR_OVERVIEW.md  EXECUTIVE_AUDIT_BRIEF.md  FAILURE_MAP.md  FAILURE_MODEL.md  GOVERNANCE_MANUAL.md  LIMITS_AND_NON_GOALS.md  REPO_STRUCTURE_RATIONALE.md  SECURITY_MODEL.md  STATUS.md
examples/: theoretical_cases.md
ops/: INTEGRATION_HHP.md  NEXT_30_DAYS_PLAN.md
research/: FOR_RESEARCHERS.md  PAPER_OUTLINE.md
src/: core.py
src/sup3ra_vectra/: __init__.py  core.py
tests/: benchmark.py
validation/: SUP3RA VECTRA NEXUS PROMPT (EN).txt  SUP3RA VECTRA NEXUS PROMPT (PT-BR).txt  VALIDATION_REPORT.md
