[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sup3ra-vectra"
version = "2.6.0"
description = "Deterministic governance engine for LLM prompt evaluation and ethical guardrails."
authors = [
  { name = "João Henrique de Souza Batista" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
  "ai-safety",
  "llm-governance",
  "ai-ethics",
  "alignment",
  "guardrails",
  "deterministic-policy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sup3ra_vectra*"]
